--- a/index.html
+++ b/index.html
@@ -4,86 +4,25 @@
   <meta charset="UTF-8">
   <title>Yolande Omam - Portfolio</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      background: #f4f6f9;
-      color: #333;
-    }
-    header {
-      background: linear-gradient(135deg, #0066cc, #00b3b3);
-      color: white;
-      text-align: center;
-      padding: 3rem 1rem;
-    }
-    header img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      border: 4px solid white;
-      margin-bottom: 1rem;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-    header p {
-      font-size: 1.2rem;
-    }
-    section {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    h2 {
-      color: #0066cc;
-      border-bottom: 2px solid #00b3b3;
-      padding-bottom: 0.3rem;
-    }
-    .project-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-    }
-    .project {
-      background: #fff;
-      border-radius: 12px;
-      padding: 1.5rem;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    .project:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
-    }
-    .project h3 {
-      margin-top: 0;
-      color: #00b3b3;
-    }
-    a {
-      color: #0066cc;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    footer {
-      background: #0066cc;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      margin-top: 2rem;
-    }
-    footer a {
-      color: #fff;
-      text-decoration: underline;
-    }
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 0; background: #f4f6f9; color: #333; }
+    header { background: linear-gradient(135deg, #0066cc, #00b3b3); color: white; text-align: center; padding: 3rem 1rem; }
+    header img { width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; margin-bottom: 1rem; }
+    header h1 { margin: 0; font-size: 2.5rem; }
+    header p { font-size: 1.2rem; }
+    section { max-width: 900px; margin: 2rem auto; padding: 0 1rem; }
+    h2 { color: #0066cc; border-bottom: 2px solid #00b3b3; padding-bottom: 0.3rem; }
+    .project-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; }
+    .project { background: #fff; border-radius: 12px; padding: 1.5rem; box-shadow: 0 4px 8px rgba(0,0,0,0.05); transition: transform 0.2s, box-shadow 0.2s; }
+    .project:hover { transform: translateY(-5px); box-shadow: 0 8px 16px rgba(0,0,0,0.1); }
+    .project h3 { margin-top: 0; color: #00b3b3; }
+    a { color: #0066cc; text-decoration: none; font-weight: bold; }
+    a:hover { text-decoration: underline; }
+    footer { background: #0066cc; color: white; text-align: center; padding: 1rem; margin-top: 2rem; }
+    footer a { color: #fff; text-decoration: underline; }
   </style>
 </head>
 <body>
   <header>
-    <!-- Udskift profil.jpg med dit eget billede i en images/ mappe -->
     <img src="images/profil.jpg" alt="Yolande Omam">
     <h1>Yolande Omam</h1>
     <p>Datamatiker | Business Process Optimization | Projekt Management</p>
@@ -91,7 +30,7 @@
 
   <section>
     <h2>Om mig</h2>
-    <p>Studerende på Datamatiker Uddannelse har jeg stor erfaring med projektledelse og brænder for at udvikle kompetencer indenfor softwareudvikling med specialisering i backend udvikling, database, cybersikkerhed og AI-løsninger.</p>
+    <p>Studerende på Datamatiker Uddannelse med erfaring i projektledelse og softwareudvikling, specialisering i Backend, Database, Cyber Security og AI-løsninger.</p>
   </section>
 
   <section>
@@ -100,27 +39,28 @@
       <div class="project">
         <h3>Lazy Catz</h3>
         <p>Booking system for Lazy Catz kattecafé.</p>
-        <a href="https://github.com/UCL-Team-8-Eksamen/LazyCat" target="_blank">Se på GitHub</a>
+        <a href="lazycatz.html">Læs mere</a>
       </div>
       <div class="project">
         <h3>AI og Sprogmodel</h3>
         <p>Et intelligent bookingsystem baseret på AI og NLP.</p>
+        <a href="ai.html">Læs mere</a>
       </div>
       <div class="project">
         <h3>Cybersikkerhed</h3>
         <p>Persondata beskyttelse og penetration testing.</p>
+        <a href="cyber.html">Læs mere</a>
+      </div>
+      <div class="project">
+        <h3>Proces</h3>
+        <p>Optimering af arbejdsgange og processer.</p>
+        <a href="proces.html">Læs mere</a>
       </div>
     </div>
   </section>
 
-  <section>
-    <h2>Kontakt</h2>
-    <p>Email: <a href="mailto:yeto63253@edu.ucl.dk">yeto63253@edu.ucl.dk</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/yolande-omam-3b06123a/" target="_blank">linkedin.com/in/yolande-omam</a></p>
-  </section>
-
   <footer>
-    <p>© 2025 Yolande Omam | Portfolio</p>
+    <p>© 2025 Yolande Omam | Portfolio | Email: <a href="mailto:yeto63253@edu.ucl.dk">yeto63253@edu.ucl.dk</a></p>
   </footer>
 </body>
 </html>
