--- a/lazycatz.html
+++ b/lazycatz.html
@@ -21,7 +21,33 @@
 
   <section>
     <h2>Om projektet</h2>
-    <p>Lazy Catz er et bookingsystem designet til at gøre reservation af bord og events hos kattecaféen nemt og effektivt. Systemet er bygget med C# og Blazor og bruger Azure SQL Database.</p>
+    <p>"Lazy Catz" er en kommende kattecafé i Danmark, som kombinerer fysisk cafémiljø med moderne
+digitale løsninger. Gæster kan nyde mad og drikke i selskab med katte og lære om dyrevelfærd,
+adoption og ansvar. Caféen har ambitioner om at bruge teknologi aktivt til at forbedre kundeoplevelsen
+og sikre kattenes trivsel. Folk kan nyde mad og drikke separat, og så kan de købe adgang til
+katterummene.</p>
+    <h3>Problemstilling</h3>
+    <p>Hvordan kan vi udvikle en digital løsning, der både understøtter kundeoplevelsen og dyrevelfærd i en
+kattecafé? Vi ønsker at undersøge, hvordan teknologi (hjemmeside) kan
+anvendes til booking, information om kattene og interaktion i caféen.</p>
+     <h3>Teknisk Fokus</h3>
+<p>I dette projekt vil vi have fokus på at arbejde med:</p>
+<ul>
+  <li>Webudvikling</li>
+  <li>Backend og database (katteprofiler, bookingsystem, brugerdata, beskyttelse af data og Cyber training test)</li>
+  <li>ChatBot med et intelligent bookingsystem</li>
+</ul>
+</p>
+
+    <h2>Billeder fra projektet</h2>
+  <img src="images/lazycatz1.jpg" alt="Lazy Catz billede 1" width="100%" style="margin-bottom:1rem;">
+  <img src="images/lazycatz2.jpg" alt="Lazy Catz billede 2" width="100%" style="margin-bottom:1rem;">
+
+  <h2>Video demo</h2>
+  <video width="100%" controls>
+    <source src="videos/demo.mp4" type="video/mp4">
+    Din browser understøtter ikke video-tagget.
+  </video>
 
     <h2>Links</h2>
     <ul>
