--- a/lazycatz.html
+++ b/lazycatz.html
@@ -40,13 +40,27 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
 </p>
 
     <h2>Billeder fra projektet</h2>
-  <img src="images/lazycatz1.jpg" alt="Lazy Catz billede 1" width="100%" style="margin-bottom:1rem;">
-  <img src="images/lazycatz2.jpg" alt="Lazy Catz billede 2" width="100%" style="margin-bottom:1rem;">
+  <img src="images/Kunde CRUD - Model-Controllers-Data-Services.jpg" alt="Kunde CRUD - Model-Controllers-Data-Services" width="100%" style="margin-bottom:1rem;">
+  <img src="images/Kunde CRUD - Views.jpg" alt="Kunde CRUD - Views" width="100%" style="margin-bottom:1rem;">
 
   <h2>Video demo</h2>
   <video width="100%" controls>
-    <source src="videos/demo.mp4" type="video/mp4">
-    Din browser understøtter ikke video-tagget.
+    <source src="videos/Kunde CRUD operationer som Administrator.mp4" type="video/mp4">
+    Administrator kan ind og ud, kan se alle kunders profil. Den kan oprette, opdatere, slette kundens profil.
+    Vedrørende sletning af kundens profil bliver den anonymieret og efter 5 år fjernet permanent fra systemer.
+    Kunde får Email notifikation vedrørende oprettelse, opdateringer eller sletning af profil.
+  </video>
+    <video width="100%" controls>
+    <source src="videos/Kunde CRUD operationer som Kunde.mp4" type="video/mp4">
+    Kunde kan logge ind og ud og se sin profil. Den kan oprette, opdatere,  og slette sin profil.
+      Vedrørende sletning af kundens profil bliver den anonymieret og efter 5 år fjernet permanent fra systemer.
+    Kunde får Email notifikation vedrørende oprettelse, opdateringer eller sletning af profil. 
+    </video>
+  </video>
+    <video width="100%" controls>
+    <source src="videos/Sletning af kundens profile med Email notifikation og Anonymisering.mp4" type="video/mp4">
+Vedrørende sletning af kundens profil bliver den anonymieret og efter 5 år fjernet permanent fra systemer.
+    Kunde får Email notifikation vedrørende sletning af profil.
   </video>
 
     <h2>Links</h2>
