--- a/proces.html
+++ b/proces.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1>Proces</h1>
-    <p>Optimering af arbejdsgange og processer</p>
+    <p>Projektstyring og Processtyring</p>
   </header>
 
   <section>
@@ -27,7 +27,6 @@
 - Indenfor AI har vi afstemt at udvikle en chatbot, et intelligent bookingsystem, som kan forberdre kundens oplevelse.
 - Indenfor Cyber Security har vi afstemt at arbejde med Penetration Testing for at simulere angreb og se hvor godt/dårligt er vores data beskyttet.
 - Mål for næste møde, som er at definere de forskellige use cases så vi kan planlægge sprint backlog items.</p>
-    <p><a href="index.html">Tilbage til forsiden</a></p>
   </section>
 
     <section>
@@ -71,6 +70,7 @@ Planen er at arbejde videre med adgangsstyring og sikkerhed i systemet.</p>
     <p>Kunde CRUD operationer er implementeret. Kunden kan oprette sin profil, se, opdatere og slette sin profil. Kunden modtager mail notifikation, når profil er oprettet eller vedrørende opdateringer eller sletning af sin profil. Med hensyn til GDPR implementering er kundens data anonymiseres, hvis der sker sletning af kundens profil eller kunden har været inaktiv i mere end 1 år mht. at data bliver slettet efter 5 år. 
     Administrator kan også logge ind og kan se alle kundens profilers og laver ændringer, hvis en kunde beder om det. Kunden modtager også mail notifikation, hvis Administrator laver ændringer på kundens profil. Se vedhæftede videoer og billeder om Kunde CRUD. Under næste møde skal vi diskutere om næste trin. 
     Det er nødvendigt at kigge på sikkerhed i vores bookingsystem, samt at definere den sprogmodel, der skal udvikles.</p>
+  <p><a href="index.html">Tilbage til forsiden</a></p>
   </section>
 
   <footer>
