--- a/lazycatz.html
+++ b/lazycatz.html
@@ -40,8 +40,8 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
 </p>
 
     <h2>Billeder fra projektet</h2>
-  <img src="images/Kunde CRUD - Model-Controllers-Data-Services.jpg" alt="Kunde CRUD - Model-Controllers-Data-Services" width="100%" style="margin-bottom:1rem;">
-  <img src="images/Kunde CRUD - Views.jpg" alt="Kunde CRUD - Views" width="100%" style="margin-bottom:1rem;">
+  <img src="images/Kunde CRUD - Model-Controllers-Data-Services.png" alt="Kunde CRUD - Model-Controllers-Data-Services" width="100%" style="margin-bottom:1rem;">
+  <img src="images/Kunde CRUD - Views.png" alt="Kunde CRUD - Views" width="100%" style="margin-bottom:1rem;">
 
   <h2>Video demo</h2>
   <video width="100%" controls>
