--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="project">
         <h3>AI og Sprogmodel</h3>
-        <p>Et intelligent bookingsystem baseret på AI og NLP.</p>
+        <p>Et intelligent bookingsystem baseret på AI.</p>
         <a href="ai.html">Læs mere</a>
       </div>
       <div class="project">
