--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <header>
-    <img src="images/profil.png" alt="Yolande Omam">
+    <img src="images/Profil.png" alt="Yolande Omam">
     <h1>Yolande Omam</h1>
     <p>Datamatiker | Business Process Optimization | Projekt Management</p>
   </header>
