--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="project">
         <h3>Proces</h3>
-        <p>Optimering af arbejdsgange og processer.</p>
+        <p>Projektstyring og Processtyring.</p>
         <a href="proces.html">Læs mere</a>
       </div>
     </div>
