--- a/cyber.html
+++ b/cyber.html
@@ -25,6 +25,17 @@
     <p><a href="index.html">Tilbage til forsiden</a></p>
   </section>
 
+  <!-- Ny sektion -->
+  <section>
+    <h2>Beskyttelse af persondata og GDPR</h2>
+    <p>Her kan du finde dokumenter vedrørende persondata-beskyttelse og GDPR i Lazy Catz:</p>
+    <ul>
+      <li><a href="docs/Lazy Catz GDPR Politik.pdf" target="_blank">Lazy Catz GDPR Politik (PDF)</a></li>
+      <li><a href="docs/Årlig GDPR-Træning til medarbejdere.pdf" target="_blank">Årlig GDPR-Træning til medarbejdere (PDF)</a></li>
+      <li><a href="docs/Anonymisering af persondata i Lazy Catz.pdf" target="_blank">Anonymisering af persondata i Lazy Catz’s system (PDF)</a></li>
+    </ul>
+  </section>
+
   <footer>
     <p>© 2025 Yolande Omam | Portfolio</p>
   </footer>
