--- a/cyber.html
+++ b/cyber.html
@@ -33,6 +33,11 @@
       <li><a href="docs/Årlig GDPR-Træning til medarbejdere.pdf" target="_blank">Årlig GDPR-Træning til medarbejdere (PDF)</a></li>
       <li><a href="docs/Anonymisering af persondata i Lazy Catz.pdf" target="_blank">Anonymisering af persondata i Lazy Catz’s system (PDF)</a></li>
     </ul>
+     <h2>Links til oplysninger</h2>
+    <p>Vi bruger oplysninger fra: </p>
+  <p><a href="https://www.datatilsynet.dk/regler-og-vejledning/gdpr-univers-for-smaa-virksomheder/grundlaeggende-om-gdpr">Datatilsynet</a></p>
+  <p><a href="https://europa.eu/youreurope/business/dealing-with-customers/data-protection/data-protection-gdpr/index_da.htm">EU Databeskyttelse i henhold til GDPR</a></p>      
+  <p><a href="https://chatgpt.com/">ChatGPT</a></p>    
   </section>
 
   <footer>
