--- a/proces.html
+++ b/proces.html
@@ -50,7 +50,7 @@ Vi har aftalt at arbejde videre med de forskellige use case med CRUD operationer
     <p>Her er der videre fokus på design og implementering af CRUD operationer for bookinger og kunder samt UX design.
 En af vores læringsmål er beskyttelse af persondata. Derfor er det vigtigt at undersøge de forskellige reglerne, der skal tages i betragtning med hensyn til GDPR reglerne for en virksomhed i Danmark som Lazy Catz. 
       De oplysninger giver også mulighed til at allerede tænke på Security By Design, når der skal implementeres GDPR reglerne. For eksempel dataminimering kræver at man skal bede personer om, de oplysninger, der er nødvendige for at fuldføre konkrakten. I vores tilfælde er det nødvendigt at vide navn af kunde, samt sin email og telefonnummer for at kunne bekræfte bookinger og kommunikere med de specifikke kunderne. Opbevaringsbegrænsning kræver at data må ikke gemmes længere end nødvendigt. Derfor arbejder vi på attributter, som gør det muligt at anonymisere og slette kundens personoplysninger, når de beder om det eller, hvis kunden ikke er aktiv i en periode.</p>
-  Vi bruger oplysninger fra, https://europa.eu/youreurope/business/dealing-with-customers/data-protection/data-protection-gdpr/index_da.htm, https://chatgpt.com/c/68c28867-b7d0-832c-90d5-f87b2fde5c48.
+  Vi bruger oplysninger fra: </p> 
   <p><a href="https://www.datatilsynet.dk/regler-og-vejledning/gdpr-univers-for-smaa-virksomheder/grundlaeggende-om-gdpr">Datatilsynet</a></p>
   <p><a href="https://europa.eu/youreurope/business/dealing-with-customers/data-protection/data-protection-gdpr/index_da.htm">EU Databeskyttelse i henhold til GDPR</a></p>      
   <p><a href="https://chatgpt.com/">ChatGPT</a></p>    
