--- a/lazycatz.html
+++ b/lazycatz.html
@@ -38,14 +38,17 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
   <li>ChatBot med et intelligent bookingsystem</li>
 </ul>
 </p>
+     </section>
 
-    <h2>Billeder fra projektet</h2>
+   <section>
+    <h2>CRUD Operationer - Kunde</h2>
+    <h3>Billeder fra projektet</h3>
     <h3>Kunde CRUD - Model-Controllers-Data-Services-Views</h3>
   <img src="images/Kunde CRUD - Model-Controllers-Data-Services.png" alt="Kunde CRUD - Model-Controllers-Data-Services" width="100%" style="margin-bottom:1rem;">
   <img src="images/Kunde CRUD - Views.png" alt="Kunde CRUD - Views" width="100%" style="margin-bottom:1rem;">
 
-  <h2>Video demo</h2>
-     <h3>CRUD operationer som Administrator</h3>
+  <h3>Video demo</h3>
+     <h4>CRUD operationer som Administrator</h4>
   <video width="100%" controls>
     <source src="videos/CRUD operationer som Administrator.mp4" type="video/mp4">
     Administrator kan ind og ud, kan se alle kunders profil. Den kan oprette, opdatere, slette kundens profil.
@@ -53,7 +56,7 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
     Kunde får Email notifikation vedrørende oprettelse, opdateringer eller sletning af profil.
   </video>
 
-    <h3>CRUD operationer som Kunde</h3>
+    <h4>CRUD operationer som Kunde</h4>
     <video width="100%" controls>
     <source src="videos/CRUD operationer som Kunde.mp4" type="video/mp4">
     Kunde kan logge ind og ud og se sin profil. Den kan oprette, opdatere,  og slette sin profil.
@@ -61,17 +64,19 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
     Kunde får Email notifikation vedrørende oprettelse, opdateringer eller sletning af profil. 
     </video>
 
-    <h3>Sletning af kundens profile med Email notifikation og Anonymisering</h3>
+    <h4>Sletning af kundens profile med Email notifikation og Anonymisering</h4>
     <video width="100%" controls>
     <source src="videos/Sletning af kundens profile med Email notifikation og Anonymisering.mp4" type="video/mp4">
 Vedrørende sletning af kundens profil bliver den anonymieret og efter 5 år fjernet permanent fra systemer.
     Kunde får Email notifikation vedrørende sletning af profil.
   </video>
 
-    <h2>Links</h2>
+      <section>
+    <h2>Programmet Link</h2>
     <ul>
       <li><a href="https://github.com/UCL-Team-8-Eksamen/LazyCat" target="_blank">GitHub Repository</a></li>
     </ul>
+         </section>
 
     <p><a href="index.html">Tilbage til forsiden</a></p>
   </section>
