--- a/lazycatz.html
+++ b/lazycatz.html
@@ -42,8 +42,28 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
 
    <section>
     <h2>CRUD Operationer - Kunde</h2>
-    <h3>Billeder fra projektet</h3>
-    <h3>Kunde CRUD - Model-Controllers-Data-Services-Views</h3>
+
+     <h3>Artefakter</h3>
+    <h4>Objektmodel</h4>
+  <img src="images/Objektmodel-CRUD-Kunde.png" alt="Objektmodel-CRUD-Kunde" width="100%" style="margin-bottom:1rem;">
+     <h4>Domænemodel</h4>
+  <img src="images/Domænemodel-CRUD-Kunde.png" alt="Domænemodel-CRUD-Kunde" width="100%" style="margin-bottom:1rem;">
+    
+     <h4>System Sekvens Diagram</h4>
+     <h5>SSD Opret kundens profil</h5>
+  <img src="images/SSD-OpretKunde.png" alt="SSD-OpretKunde" width="100%" style="margin-bottom:1rem;">
+     <h5>SSD Se kundens profil</h5>
+  <img src="images/SSD-SeKundensProfil.png" alt="SSD-SeKundensProfil" width="100%" style="margin-bottom:1rem;">
+  <h5>SSD Ret kundens profil</h5>
+  <img src="images/SSD-RetKundensProfil.png" alt="SSD-RetKundensProfil" width="100%" style="margin-bottom:1rem;">
+     <h5>SSD Slet kundens profil</h5>
+  <img src="images/SSD-SletKundensProfil.png" alt="SSD-SletKundensProfil" width="100%" style="margin-bottom:1rem;">
+
+      <h4>Operationskonkrakter</h4>
+  <img src="images/OperationsKontrakt-CRUD Kunde.png" alt="OperationsKontrakt-CRUD Kunde" width="100%" style="margin-bottom:1rem;">
+     
+    <h3>Billeder fra Programmet</h3>
+    <h4>Kunde CRUD - Model-Controllers-Data-Services-Views</h4>
   <img src="images/Kunde CRUD - Model-Controllers-Data-Services.png" alt="Kunde CRUD - Model-Controllers-Data-Services" width="100%" style="margin-bottom:1rem;">
   <img src="images/Kunde CRUD - Views.png" alt="Kunde CRUD - Views" width="100%" style="margin-bottom:1rem;">
 
