--- a/lazycatz.html
+++ b/lazycatz.html
@@ -61,6 +61,17 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
 
       <h4>Operationskonkrakter</h4>
   <img src="images/OperationsKontrakt-CRUD Kunde.png" alt="OperationsKontrakt-CRUD Kunde" width="100%" style="margin-bottom:1rem;">
+
+     <h4>Sekvens Diagram</h4>
+     <h5>SD Create customer profile</h5>
+  <img src="images/SD-OpretKunde.png" alt="SD-OpretKunde" width="100%" style="margin-bottom:1rem;">
+     <h5>SD View customer profile</h5>
+  <img src="images/SD-SeKundensProfil.png" alt="SD-SeKundensProfil" width="100%" style="margin-bottom:1rem;">
+  <h5>SD Update customer profile</h5>
+  <img src="images/SD-RetKundensProfil.png" alt="SD-RetKundensProfil" width="100%" style="margin-bottom:1rem;">
+     <h5>SD Delete customer profile</h5>
+  <img src="images/SD-SletKundensProfil.png" alt="SD-SletKundensProfil" width="100%" style="margin-bottom:1rem;">
+
      
     <h3>Billeder fra Programmet</h3>
     <h4>Kunde CRUD - Model-Controllers-Data-Services-Views</h4>
