--- a/lazycatz.html
+++ b/lazycatz.html
@@ -72,7 +72,7 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
      <h5>SD Delete customer profile</h5>
   <img src="images/SD-SletKundensProfil.png" alt="SD-SletKundensProfil" width="100%" style="margin-bottom:1rem;">
 
-     <h4>Design Class Diagram</h4>
+     <h4>Design Class Diagram / Pakkediagram</h4>
   <img src="images/Design Class Diagram-CRUD-Kunde.png" alt="Design Class Diagram-CRUD-Kunde" width="100%" style="margin-bottom:1rem;">
 
       <h4>ER Diagram</h4>
