--- a/lazycatz.html
+++ b/lazycatz.html
@@ -64,7 +64,7 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
 
      <h4>Sekvens Diagram</h4>
      <h5>SD Create customer profile</h5>
-  <img src="images/SD-OpretKunde.png" alt="SD-OpretKunde" width="100%" style="margin-bottom:1rem;">
+  <img src="images/SD-OpretKundensProfil.png" alt="SD-OpretKundensProfil" width="100%" style="margin-bottom:1rem;">
      <h5>SD View customer profile</h5>
   <img src="images/SD-SeKundensProfil.png" alt="SD-SeKundensProfil" width="100%" style="margin-bottom:1rem;">
   <h5>SD Update customer profile</h5>
