--- a/lazycatz.html
+++ b/lazycatz.html
@@ -40,6 +40,11 @@ anvendes til booking, information om kattene og interaktion i caféen.</p>
 </p>
      </section>
 
+  <section>
+    <h2>Lazy Catz Business Model Canvas</h2>
+     <img src="images/Lazy Catz Business Model Canvas.png" alt="Lazy Catz Business Model Canvas" width="100%" style="margin-bottom:1rem;">
+  </section>
+
    <section>
     <h2>CRUD Operationer - Kunde</h2>
 
