--- a/lazycatz.html
+++ b/lazycatz.html
@@ -20,6 +20,7 @@
   </header>
 
   <section>
+    <img src="images/The Lazy Catz.png" alt="The Lazy Catz" width="100%" style="margin-bottom:1rem;">
     <h2>Om projektet</h2>
     <p>"Lazy Catz" er en kommende kattecafé i Danmark, som kombinerer fysisk cafémiljø med moderne
 digitale løsninger. Gæster kan nyde mad og drikke i selskab med katte og lære om dyrevelfærd,
