--- a/lazycatz.html
+++ b/lazycatz.html
@@ -20,7 +20,9 @@
   </header>
 
   <section>
-    <img src="images/The Lazy Catz.png" alt="The Lazy Catz" width="20%" style="margin-bottom:1rem;">
+  <div style="text-align: center;">
+  <img src="images/The Lazy Catz.png" alt="The Lazy Catz" width="20%" style="margin-bottom:1rem;">
+  </div>
     <h2>Om projektet</h2>
     <p>"Lazy Catz" er en kommende kattecafé i Danmark, som kombinerer fysisk cafémiljø med moderne
 digitale løsninger. Gæster kan nyde mad og drikke i selskab med katte og lære om dyrevelfærd,
